ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: nginx-notes-ingress
  namespace: nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  
spec: 
 rules:
 - http:
    paths:
      - pathType: Prefix
        path: /nginx
        backend:
          service:
            name: nginx-service
            port: 
              number: 80
      - pathType: Prefix
        path: /
        backend:
          service:
            name: notes-app-service
            port:
              number: 8000
